fixtures/runtime/valid/runtime_types/property-type.php
<?php
class Box {
    public int $value;
}

$box = new Box();
$box->value = 7;
echo $box->value, "\n";
