fixtures/runtime/invalid/runtime_types/property-type-fail.php
<?php
class Box {
    public int $value;
}

$box = new Box();
$box->value = [];
